# model-provenance-validator

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release-artifacts.yml
docs/brand/: README.md
docs/superpowers/plans/: 2026-06-13-proof-packet-output.md
examples/: demo.py
examples/envelopes/: release.provenance.json
src/model_provenance_validator/: __init__.py  cli.py  packet.py  schema.json  validator.py
tests/: test_validator.py
tests/fixtures/: invalid.json  valid.json
