[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "model-provenance-validator"
version = "0.1.1"
description = "Validate provenance envelopes; redact secret-shaped values out of its own output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["model", "provenance", "claims", "schema", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["proof-surface>=0.1"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
model-provenance-validator = "model_provenance_validator.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
